Implementando Automovel e TipoAutomovel (isolado)
