# src/modules/automovel/infra/typeorm/entities/Automovel.ts
@@ -1,39 +1,40 @@
-import { Cliente } from "../../../../cliente/infra/typeorm/entities/Cliente";
-import { OrdemServico } from "@modules/ordemServico/infra/typeorm/entities/OrdemServico";
 import { Column, CreateDateColumn, Entity, JoinColumn, ManyToOne, OneToMany, OneToOne, PrimaryGeneratedColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 import { TipoAutomovel } from "./TipoAutomovel";
 
-@Entity()
+@Entity("automoveis")
 class Automovel {
 
     @PrimaryGeneratedColumn('uuid')
-    id: string;
+    id?: string;
 
     @Column()
-    autoPlate: string;
+    plate: string;
     
     @Column()
-    autoModel: string;
+    model: string;
 
     @Column()
-    autoBrand: string;
+    brand: string;
 
     @Column()
-    autoColor: string;
+    color: string;
 
     @Column()
-    autoYear: number;
+    year: number;
 
     @Column()
-    autoRenavam: number;
+    renavam: number;
 
     @CreateDateColumn()
     created_at?: Date;
 
     @ManyToOne(() => TipoAutomovel, { eager: true })
-    @JoinColumn()
+    @JoinColumn({ name: "typeId" })
     tipoAutomovel: TipoAutomovel;
+
+    @Column()
+    typeId: string;
         
     constructor() {
         if (!this.id) {
